<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_text"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:gravity="center_vertical"
        android:text="@string/year_of_study_text"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/year_of_study_radiogroup"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/year_of_study_radiogroup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_text"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/rb_first_year"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rb_first_year_text" />

        <RadioButton
            android:id="@+id/rb_second_year"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rb_second_year_text" />

        <RadioButton
            android:id="@+id/rb_third_year"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rb_third_year_text" />

        <RadioButton
            android:id="@+id/rb_fourth_year"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rb_fourth_year_text" />
    </RadioGroup>
</androidx.constraintlayout.widget.ConstraintLayout>